@@ -101,7 +101,7 @@ gchar *s = N_("Do not show hidden directories");
 gchar *s = N_("Press this button to dismiss the dialog");
 gchar *s = N_("Find and replace");
 gchar *s = N_("Find & Replace");
-gchar *s = N_("Search Expression");
+gchar *s = N_("Search Expression:");
 gchar *s = N_("Regular Expression");
 gchar *s = N_("Greedy matching");
 gchar *s = N_("Case insensitive");
@@ -109,37 +109,36 @@ gchar *s = N_("Match at start of word");
 gchar *s = N_("Match complete lines");
 gchar *s = N_("Match complete words");
 gchar *s = N_("Search Expression");
-gchar *s = N_("Search In");
-gchar *s = N_("Search Action");
-gchar *s = N_("Search Direction");
+gchar *s = N_("Search In:");
+gchar *s = N_("Search Direction:");
 gchar *s = N_("Search Variable");
 gchar *s = N_("$(module.source.files) $(module.include.files)");
 gchar *s = N_("$(module.source.files) $(module.include.files)");
 gchar *s = N_("File Filter");
-gchar *s = N_("Choose Files");
+gchar *s = N_("Choose Files:");
 gchar *s = N_("*\\.*");
 gchar *s = N_("*.c *.cpp *.cxx *.cc *.C *.h *.H *.hh *.hxx *.hpp");
 gchar *s = N_("*.c *.cpp *.cxx *.cc *.C *.h *.H *.hh *.hxx *.hpp Makefile.am configure.* README AUTHORS ChangeLog *.m4");
 gchar *s = N_("Space-seperated list of file name patterns to match");
-gchar *s = N_("Ignore Files");
+gchar *s = N_("Ignore Files:");
 gchar *s = N_("*.so *.o *.a *.la");
 gchar *s = N_("Space-seperated list of file name patterns to ignore");
 gchar *s = N_("*.so *.o *.a *.la");
 gchar *s = N_("Ignore Hidden Files");
-gchar *s = N_("Ignore Binary Files");
-gchar *s = N_("Choose Directories");
+gchar *s = N_("Choose Directories:");
 gchar *s = N_("Space-seperated list of directory name patterns to match");
-gchar *s = N_("Ignore Directories");
+gchar *s = N_("Ignore Directories:");
 gchar *s = N_("CVS");
 gchar *s = N_("CVS intl po");
 gchar *s = N_("Space-seperated list of directory name patterns to ignore");
 gchar *s = N_("Ignore Hidden Directories");
+gchar *s = N_("Ignore Binary Files");
 gchar *s = N_("Search Recursively");
 gchar *s = N_("Max. Actions");
 gchar *s = N_("No Limit");
+gchar *s = N_("Search Action:");
 gchar *s = N_("Search Target");
-gchar *s = N_("Replace");
-gchar *s = N_("Replace With");
+gchar *s = N_("Replace With:");
 gchar *s = N_("Expand regex back references");
 gchar *s = N_("Replace Expression");
 gchar *s = N_("Search");
